aw: Do not DumpWithoutCrashing if crash reporter is not enabled.

GSA can apparently use the AwDebug reflection interface at a
point where WebView (and hence the crash reporter) hasn't been
initialized yet. We should just fail in this case.

BUG=698243

Review-Url: https://codereview.chromium.org/2729093004
Cr-Commit-Position: refs/heads/master@{#455426}

Former-commit-id: dec2b22c83c792439a84157ee7bc6c900ea89c09